add addEvent endpoint
